--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.9.2",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.16",
     "request": "^2.88.2"
   },
